--- a/stravaClient/indextron.html
+++ b/stravaClient/indextron.html
@@ -5,6 +5,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="lib/date.js"></script>
+    <script src="https://www.google.com/jsapi"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=drawing,geometry&key=AIzaSyAQMkpxb9BOWSzHYvNhJz9LZuZqGp0toF4"></script>
 
     <link rel="stylesheet" href="./css/app.css">
