--- a/stravaClient/indextron.html
+++ b/stravaClient/indextron.html
@@ -3,6 +3,11 @@
 <head>
     <title>Stravatron</title>
 
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.23.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.23.0/mapbox-gl.css' rel='stylesheet' />
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="lib/date.js"></script>
     <script src="https://www.google.com/jsapi"></script>
