--- a/stravaClient/indextron.html
+++ b/stravaClient/indextron.html
@@ -14,6 +14,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=drawing,geometry&key=AIzaSyAQMkpxb9BOWSzHYvNhJz9LZuZqGp0toF4"></script>
 
     <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/index.css">
 
 </head>
 <body>
